<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/Synchronisation_cle"
        android:title="@string/Synchronisation_automatique" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/Notification_cle"
        android:title="@string/notification" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/Code_pin_activation_cle"
        android:title="@string/code_pin" />

    <EditTextPreference
        android:id="@+id/edt1"
        android:defaultValue="1234"
        android:fadeScrollbars="true"
        android:inputType="text"
        android:key="@string/Code_Pin_EditText_cle"
        android:title="@string/old_pass" />

</PreferenceScreen>

