<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:icon="@drawable/ic_iconmore"
        android:title="@string/menu"
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/calendar"
                android:icon="@drawable/ic_iconcalendar"
                android:title="@string/menu_calendrier" />

            <item
                android:id="@+id/synchron"
                android:icon="@drawable/ic_iconsynchron"
                android:title="@string/menu_synchronisation" />


            <item
                android:id="@+id/setting"
                android:icon="@drawable/ic_iconsetting"
                android:title="@string/menu_option" />

            <item
                android:id="@+id/deconnect"
                android:icon="@drawable/ic_iconlogout"
                android:title="@string/menu_deconnexion" />

        </menu>


    </item>

</menu>